test/shared/applications/valid/withDirectoriesWithoutIndex/data/server/writeModel/sampleContext/sampleAggregate/commands.js
'use strict';

const { commands } = require('../../../../base/server/writeModel/sampleContext/sampleAggregate');

module.exports = commands;
