test/shared/applications/invalid/withDirectoriesAndWrongFileName/data/server/writeModel/sampleContext/sampleAggregate/aggregate.js
'use strict';

const { initialState, commands, events } = require('../../../../base/server/writeModel/sampleContext/sampleAggregate');

module.exports = { initialState, commands, events };
